// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordPage should match invalid token message section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="text-center mt-3"
      >
        <div
          className="alert d-flex align-items-start alert-danger mt-n2"
        >
          <div />
          <div>
            <h4
              style={
                Object {
                  "color": "#a0050e",
                }
              }
            >
              <span>
                Invalid Password Reset Link
              </span>
            </h4>
            <span>
              This password reset link is invalid. It may have been used already. To reset your password, go to the 
              <a
                href="/login"
                onClick={[Function]}
                target="_self"
              >
                <span>
                  sign-in
                </span>
              </a>
               page and select 
              <strong>
                Forgot Password
              </strong>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match reset password default section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "450px",
      }
    }
  >
    <form
      className="m-4"
    >
      <div
        className="form-group"
      >
        <h3
          className="text-center mt-3"
        >
          Reset Your Password
        </h3>
        <p
          className="mb-4"
        >
          Enter and confirm your new password.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="reset-password-input"
            >
              New Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="reset-password-input"
              name="new-password1"
              onBlur={[Function]}
              placeholder=""
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="confirm-password-input"
            >
              Confirm Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="confirm-password-input"
              name="new-password2"
              onChange={[Function]}
              placeholder=""
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="confirm-password-input-invalid-feedback"
            >
              Passwords do not match.
            </strong>
          </div>
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Reset my password
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match successful reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="text-center mt-3"
      >
        <div
          className="fade alert alert-success show"
          role="alert"
        >
          <h4
            style={
              Object {
                "color": "green",
              }
            }
          >
            <span>
              Password Reset Complete.
            </span>
          </h4>
          <span>
            Your password has been reset. 
            <a
              href="/login"
              onClick={[Function]}
              target="_self"
            >
              <span>
                Sign-in
              </span>
            </a>
             to your account.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match unsuccessful reset message section snapshot 1`] = `
Array [
  <div
    className="d-flex justify-content-center reset-password-container"
  >
    <div
      className="d-flex flex-column"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <div
        className="form-group"
      >
        <div
          className="text-center mt-3"
        >
          <div
            className="fade alert alert-danger show"
            role="alert"
          >
            <div
              style={
                Object {
                  "color": "#a0050e",
                }
              }
            >
              <span>
                Password reset was unsuccessfull. 
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="d-flex justify-content-center reset-password-container"
  >
    <div
      className="d-flex flex-column"
      style={
        Object {
          "width": "450px",
        }
      }
    >
      <form
        className="m-4"
      >
        <div
          className="form-group"
        >
          <h3
            className="text-center mt-3"
          >
            Reset Your Password
          </h3>
          <p
            className="mb-4"
          >
            Enter and confirm your new password.
          </p>
          <div
            className="d-flex flex-column align-items-start"
          >
            <div
              className="form-group"
            >
              <label
                className="h6 mr-1"
                htmlFor="reset-password-input"
              >
                New Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="reset-password-input"
                name="new-password1"
                onBlur={[Function]}
                placeholder=""
                style={
                  Object {
                    "width": "400px",
                  }
                }
                type="password"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="h6 mr-1"
                htmlFor="confirm-password-input"
              >
                Confirm Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="confirm-password-input"
                name="new-password2"
                onChange={[Function]}
                placeholder=""
                style={
                  Object {
                    "width": "400px",
                  }
                }
                type="password"
                value=""
              />
              <strong
                className="invalid-feedback"
                id="confirm-password-input-invalid-feedback"
              >
                Passwords do not match.
              </strong>
            </div>
          </div>
        </div>
        <button
          className="btn-primary submit btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset my password
        </button>
      </form>
    </div>
  </div>,
]
`;

exports[`ResetPasswordPage show spinner component during token validation 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="d-flex flex-column align-items-start"
      >
        <h3
          className="text-center mt-3"
        >
          <span>
            Token validation in progress .. 
          </span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-spinner fa-w-16 fa-spin "
            data-icon="spinner"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </h3>
      </div>
    </div>
  </div>
</div>
`;
